--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "REST API",
         "custom post type",
         "endpoints",
-        "routes",
+        "routes"
     ],
     "support": {
         "issues": "https://github.com/Bccampus/rest-routes/issues",
@@ -26,7 +26,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.5",
