--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "bccampus/rest-routes",
-    "description": "Activate WP REST API routes for custom post types.",
-    "type": "wordpress-plugin",
+    "description": "WP Plugin Activate WP REST API routes for custom post types.",
     "license": "MIT",
     "homepage": "https://github.com/BCcampus/rest-routes/",
     "authors": [
@@ -31,5 +30,16 @@
     "require-dev": {
         "phpunit/phpunit": "~5.5",
         "wp-coding-standards/wpcs": "^0.10"
+    },
+    "autoload": {
+        "files": ["rest-routes.php"]
+    },
+    "archive" : {
+        "exclude": [
+            ".gitignore",
+            ".travis.yml",
+            "phpunit.xml",
+            "tests"
+        ]
     }
 }
