--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "bccampus/custom-rest-routes",
     "description": "WP Plugin Activate WP REST API routes for custom post types.",
     "license": "MIT",
+    "type": "wordpress-plugin",
+    "version": "2.0",
     "homepage": "https://github.com/BCcampus/custom-rest-routes/",
     "authors": [
         {
@@ -27,9 +29,6 @@
     "require-dev": {
         "phpunit/phpunit": "~5.7",
         "humanmade/coding-standards": "^0.2.1"
-    },
-    "autoload": {
-        "files": ["custom-rest-routes.php"]
     },
     "archive" : {
         "exclude": [
