--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,13 @@
   "description": "WP Plugin Activate WP REST API routes for custom post types.",
   "license": "MIT",
   "type": "wordpress-plugin",
-  "version": "2.0",
+  "version": "2.0.1",
   "homepage": "https://github.com/BCcampus/custom-rest-routes/",
   "authors": [
     {
-      "name": "Alex Paredes",
-      "email": "aparedes@bccampus.ca"
-    },
-    {
-      "name": "Brad Payne",
-      "email": "brad@bradpayne.ca"
+      "name": "BCcampus",
+      "email": "code@bccampus.ca",
+      "homepage": "https://github.com/BCcampus"
     }
   ],
   "keywords": [
@@ -27,7 +24,7 @@
   },
   "config": {
     "platform": {
-      "php": "7.0.30"
+      "php": "7.1"
     }
   },
   "require": {
@@ -35,7 +32,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7",
-    "humanmade/coding-standards": "^0.3"
+    "humanmade/coding-standards": "^0.5"
   },
   "archive": {
     "exclude": [
